# xmodits

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build-multi.sh  build.rs  compile.sh  gui.sh
.cargo/: config.toml
.github/workflows/: build.yml  build_artifacts.yml  build_cli_artifacts.yml  build_gui_artifacts.yml  ci.yml  main.yml  pypi.yml  release.yml  rust.yml
app/: Cargo.toml  README.md  build.rs
app/cli/: Cargo.toml  README.md
app/cli/src/: api.rs  app.rs  cli.rs  lib.rs  main.rs
app/cli/src/app_win/: mod.rs
app/gui/: Cargo.toml  README.md  build.rs
app/gui/src/: _app.rs  app.rs  dialog.rs  main.rs  simple.rs
app/gui/src/cfg/: mod.rs
app/gui/src/core/: cfg.rs  dialog.rs  font.rs  log.rs  mod.rs  rip_async.rs  sfx.rs  xmodits.rs
app/gui/src/core/async_xmodits/: loader.rs  mod.rs  ripper.rs
app/gui/src/gui/: icons.rs  mod.rs
app/gui/src/gui/style/: button.rs  checkbox.rs  mod.rs  progress_bar.rs  radio.rs  scrollable.rs  svg.rs  text.rs  text_input.rs  theme.rs
app/gui/src/gui/views/: about.rs  config_name.rs  config_ripping.rs  configure.rs  help.rs  mod.rs  settings.rs  stats.rs  trackers.rs
app/gui/src/gui/widgets/: mod.rs  row.rs  trackers.rs
app/gui/src/simple/: dialoge.rs  mod.rs  win.rs
app/gui/src/xmodits_api/: mod.rs
app/src/: api.rs  app.rs  app_unix.rs  app_win.rs  cli.rs  dialoge.rs  lib.rs  main.rs  rip_async.rs
app/src/app_win/: dialoge.rs  mod.rs  win.rs
app/src/win/: app_win.rs  dialoge.rs  mod.rs
app/xmodits_common/: Cargo.toml
app/xmodits_common/src/: lib.rs
app_cli/: Cargo.toml  build.rs
app_cli/src/: app.rs  app_unix.rs  app_win.rs  dialoge.rs  main.rs  win.rs
app_gui/: Cargo.toml  README.md
app_gui/src/: app.rs  main.rs  modloader.rs  xmodits.rs
assets/: manual.txt
assets/logos/aseprite/: xmodits_palette.aseprite
assets/screenshots/: README.md
audio_engine/: Cargo.toml
audio_engine/src/: core.rs  lib.rs  player.rs  sample.rs  sample_pack.rs
audio_engine/src/sample/: buffer.rs  loop_point.rs
benches/: list.txt  loaders.rs  modload_benchmark.rs
data/: Cargo.toml
data/src/: config.rs  entries.rs  error.rs  history.rs  lib.rs  name_preview.rs  theme.rs  time.rs  tracker_info.rs
data/src/config/: filters.rs  general.rs  name_params.rs  ripping.rs  sample_naming.rs  sample_ripping.rs
data/src/config/filters/: date.rs  name.rs  regex.rs  size.rs
data/src/theme/: themes.rs
doc/: WAV header.md
extras/: ascii_4.txt  ascii_art.txt  ascii_art_2.txt  ascii_art_3.txt
extras/logos/: icon.xcf
extras/logos/aseprite/: icon_2.aseprite  (+1 more)
extras/screenshots/: README.md
pylib/: Cargo.toml  README.md  pyproject.toml
pylib/examples/: example.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py
pylib/src/: api.rs  error.rs  lib.rs
resources/: IT compression.md  IT format.md  MOD Format.md  PTGenerator.c  README.md  S3M format.md  UMX format.md  Websites.md  XM format.md
resources/logs/: report.txt  xmodits_log_7_7_22.txt
resources/old/: IT compression.md  IT format.md  MOD Format.md  XM format.md
screenshots/: README.md
scripts/: build-macos.sh
src/: app.rs  cli.rs  core.rs  dialog.rs  error.rs  event.rs  font.rs  formatter.rs  gui.rs  icon.rs  interface.rs  lib.rs  loader.rs  logger.rs  main.rs  main_.rs  ripper.rs  sample_ripper.rs  screen.rs  simple.rs  style.rs  theme.rs  utils.rs  view.rs  widget.rs
src/app/: simple.rs  state.rs
src/common/: mod.rs
src/core/: cfg.rs  dialog.rs  entries.rs  extraction.rs  xmodits.rs
src/fmt/: amig_mod.rs  compression.rs  deltadecode.rs  it.rs  mod.rs  s3m.rs  tables.rs  umx.rs  xm.rs
src/gui/: app.rs  icons.rs  mod.rs  style.rs  views.rs
src/it/: README.md  compression.rs  it.rs  mod.rs  test.rs  tracker.rs
src/logger/: bad_modules.rs  crash_handler.rs  global_tracker.rs
src/modtrk/: README.md  mod.rs  modtrk.rs  test.rs
src/ripper/: bad_modules.rs  extraction.rs  handle.rs  signal.rs  stop_flag.rs  subscription.rs
src/s3m/: README.md  mod.rs  s3m.rs  test.rs
src/sample_ripper/: filter.rs  handle.rs  signal.rs  stop_flag.rs  subscription.rs
src/screen/: about.rs  build_info.rs  config.rs  configuration.rs  crash.rs  entry.rs  history.rs  main_panel.rs  ripping.rs  sample_player.rs  sample_preview.rs  settings.rs  tracker_info.rs
src/style/: application.rs  button.rs  checkbox.rs  container.rs  helpers.rs  overlay.rs  pick_list.rs  progress_bar.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  text.rs  text_input.rs  waveform_view.rs
src/umx/: README.md  mod.rs
src/utils/: array.rs  ascii.rs  macros.rs  mod.rs  name.rs  reader.rs  signed.rs  wav.rs
src/view/: destination_bar.rs  main_panel.rs  sample_naming.rs  sample_preview.rs  sample_ripping.rs  tracker_info.rs
src/wav/: mod.rs
src/widget/: animation.rs  collection.rs  helpers.rs  waveform.rs  waveform_view.rs
src/xm/: deltadecode.rs  mod.rs  test.rs
tests/: README.md  it.rs  mod_.rs  s3m.rs  utils.rs  xm.rs
update/: Cargo.toml
updater/: Cargo.toml
updater/src/: lib.rs
xmodits-cli/: Cargo.toml
xmodits-cli/src/: api.rs  cli.rs  main.rs
xmodits-gui/: Cargo.toml  Cross.toml  README.md
xmodits-gui/res/gif/: README.md
xmodits-gui/src/: main.rs  simple.rs
xmodits-gui/src/core/: audio.rs  cfg.rs  dialog.rs  entries.rs  extraction.rs  history.rs  log.rs  mod.rs  time.rs  track.rs  tracker_info.rs  xmodits.rs
xmodits-gui/src/core/audio/: core.rs  device.rs  engine.rs  mod.rs  sample.rs  sample_cache.rs  sample_pack.rs  signal.rs
xmodits-gui/src/core/panic_handler/: panic.rs
xmodits-gui/src/gui/: app.rs  icons.rs  mod.rs  utils.rs
xmodits-gui/src/gui/style/: button.rs  checkbox.rs  mod.rs  progress_bar.rs  radio.rs  scrollable.rs  slider.rs  svg.rs  text.rs  text_input.rs  theme.rs
xmodits-gui/src/gui/views/: config_general.rs  config_name.rs  config_ripping.rs  help.rs  mod.rs  settings.rs  trackers.rs
xmodits-lib-old/: Cargo.toml  README.md
xmodits-lib-old/src/: error.rs  loader.rs
xmodits_py/: Cargo.toml  README.md
xmodits_py/src/: error.rs  lib.rs
(+115 files in other folders)
