[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
description = "XMODITS graphical application"
version = "0.12.0"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/B0ney/xmodits"

[features]
default = ["build_info"]
audio = ["audio_engine"]
build_info = ["built"]
custom_anim = ["iced_gif"]
jemalloc = ["tikv-jemallocator"]
wgpu = ["iced/wgpu"]

[dependencies.iced]
# version = "0.12.0"
git = "https://github.com/iced-rs/iced.git"
default-features = false
features = ["image", "tokio"]

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["sync", "fs", "io-util", "parking_lot"] }
dirs = "5.0.0"
anyhow = "1.0.0"
tracing = "0.1.40"

[dependencies]
data = { path = "data" }
audio_engine = { path = "audio_engine", optional = true }

tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true

tracing-subscriber = "0.3.17"
open = "5.0.0"
walkdir = "2.4.0"
rand = "0.8.5"
parking_lot = "0.12.1"
rayon = "1.8"
once_cell = "1.18.0"
tempfile = "3.8.0"
chrono = { version = "0.4", features = ["serde"] }
rfd = { version = "0.12.0", default-features = false, features = ["xdg-portal"] }
iced_gif = { version = "0.4.0", optional = true }
# regex = "1.10.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[build-dependencies]
built = { version = "0.7.0", features = ["chrono", "git2"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.17"
static_vcruntime = "2.0.0"

[package.metadata.winresource]
OriginalFilename = "XMODITS.EXE"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"

[profile.dev]
split-debuginfo = "packed"
incremental = true

[profile.release]
strip = true
opt-level = 3
codegen-units = 1

[workspace]
members = ["data", "audio_engine"]
