[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
description = "XMODITS graphical application"
version = "0.12.0"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/B0ney/xmodits"

[features]
default = ["built", "audio", "iced_gif"]
audio = ["audio_engine", "dasp"]
wgpu = ["iced/wgpu"]

[workspace]
members = ["data", "audio_engine"]

[workspace.dependencies]
tokio = { version = "1", features = ["sync", "fs", "io-util", "parking_lot"] }
dirs = "5"
anyhow = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[workspace.dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "0f27016"
features = ["serde"]

[dependencies.iced]
# version = "0.12.0"
git = "https://github.com/iced-rs/iced.git"
default-features = false
features = ["image", "tokio", "multi-window", "advanced", "canvas"]

[dependencies.iced_gif]
git = "https://github.com/B0ney/iced_gif.git"
branch = "iced_master"
optional = true

[dependencies.rfd]
version = "0.13"
default-features = false
features = ["xdg-portal", "tokio"]

[dependencies]
data = { path = "data" }
audio_engine = { path = "audio_engine", optional = true }

tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
xmodits-lib.workspace = true
chrono.workspace = true

tracing-subscriber = "0.3"
open = "5"
walkdir = "2"
rand = "0.8"
parking_lot = "0.12"
rayon = "1"
once_cell = "1"
tempfile = "3"
dasp = { version = "0.11.0", features = ["interpolate-linear"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
static_vcruntime = "2"

[package.metadata.winresource]
OriginalFilename = "XMODITS.EXE"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"

[profile.dev]
split-debuginfo = "packed"
incremental = true

[profile.release]
strip = true
opt-level = "s"
codegen-units = 1

[profile.release.package.xmodits-lib]
opt-level = 3