[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
version = "0.9.7"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
xmodits-lib = { path = "../" }
clap = { version ="4.0.10", features = ["derive", "cargo", "wrap_help"]}


[target.'cfg(windows)'.dependencies]
native-dialog = {version="0.6.3", features= ["windows_dpi_awareness", "windows_visual_styles"] }
crossbeam-channel = "0.5.5"
rand = "0.8.5"


[build-dependencies]
winres = "0.1.12"

[features]
ascii_art = []
advanced = []


[profile.release]
strip = true
opt-level = "s"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'  

[profile.test]
opt-level = 1

[package.metadata.winres]
FileDescription = "Rip samples from tracker music with speed!"
Comments = "This software is licensed under GPLv3 (or later). You can obtain the source code here: https://github.com/B0ney/xmodits/"
