[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
version = "0.7.0-alpha"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.6", features=["cargo"]}
xmodits-lib = {path = "../"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
ascii_art = []

[profile.release]
strip = true
opt-level = "s"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'  

[profile.dev]
opt-level = "z"
lto = true          # Enable Link Time Optimization 
incremental = true

