[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
version = "0.8.7"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
xmodits-lib = {path = "../"}

[build-dependencies]
winres = "0.1.12"

[features]
ascii_art = []

[profile.release]
strip = true
opt-level = "s"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'  

[profile.test]
opt-level = 1

[package.metadata.winres]
