[package]
name = "xmodits-gui"
authors = ["B0ney https://github.com/B0ney"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmodits-lib = {path = "../"}
eframe = "0.18.0"
rfd = {version = "0.9.1", default-features=false, features=["xdg-portal"]}
# get audio playback try cpal

tracing = "0.1.34"
tracing-subscriber = "0.3.11"
crossbeam-channel = "0.5.4" # faster than mpsc

[dependencies.egui_extras]
version = "0.18.0"
features = ["image"]

[dependencies.image] 
version = "0.24"
features = ["jpeg", "png"]

[profile.release]
# codegen-units = 1
debug = 1
incremental = true
