[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "78675a3"
features = ["serde"]

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"

[dependencies]
tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.7.5" # todo: switch to different format?
palette = "0.7.3"