[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"

[dependencies]
tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
xmodits-lib.workspace = true

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
manual = []