[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
xmodits-lib.workspace = true
iced.workspace = true

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
manual = []