[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "xmodits_py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]

[project.urls]
"Source Code" = "https://github.com/B0ney/xmodits"