[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
description = "XMODITS Commandline application"
version = "0.11.0"
edition = "2021"
license = "LGPLv3"
repository = "https://github.com/B0ney/xmodits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "65deb56"

[dependencies]
clap = { version = "4.3.11", features = ["derive", "cargo", "wrap_help"] }
rayon = { version = "1.7.0", optional = true }
wild = "2.1.0"

[target.'cfg(windows)'.dependencies]
shellexpand = "3.0"