[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
description = "XMODITS graphical application"
version = "0.10.0"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/B0ney/xmodits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
xmodits-lib = { git = "https://github.com/B0ney/xmodits-lib.git", features = ["serde", "log"] }
anyhow = "1.0.66"
toml = "0.7.3"
dirs = "5.0.0"
once_cell = "1.17.1"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["sync", "fs"] }
image = { version = "0.24.6", default-features = false, features = ["ico"] }
rfd = { version = "0.11.3", default-features = false, features = ["xdg-portal"] }
native-dialog = { version="0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.2.0"
open = "3.2.0"
walkdir = "2.3.3"
rand = "0.8.5"
# shellexpand = "3.0.0"
cosmic-time = "0.1.2"
iced_aw = "0.4.1"

[dependencies.iced]
version = "0.8.0"
features = [
    # "svg",
    "glow", 
    "image", 
    "default_system_font",
    "tokio",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
# winsafe = { version = "0.0.14", features = ["shell", "user"] }

[package.metadata.winres]
OriginalFilename = "XMODITS.EXE"
FileDescription = "A tool to extract samples from tracker modules. https://github.com/B0ney/xmodits/ - GPLv3"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"

[profile.dev]
split-debuginfo = "packed"
codegen-units = 256