[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
description = "XMODITS graphical application"
version = "0.10.0"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/B0ney/xmodits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
# xmodits core library.
xmodits-lib = { git = "https://github.com/B0ney/xmodits-lib.git", rev = "16cc1175f19f9726fd3d7765b948318dbc4d7795", features = ["serde", "log"] }

# Handle errors in a generic way
anyhow = "1.0.0"

# Platform specific directories for standard locations
dirs = "5.0.0"

# Date & Time
chrono = { version = "0.4.24", features = ["serde"] }

# Data serialization
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.7.3"

# Async
tokio = { version = "1.26.0", features = ["sync", "fs", "io-util", "parking_lot"] }

# To load icons
image = { version = "0.24.6", default-features = false, features = ["ico"] }

# File dialog
rfd = { version = "0.11.3", default-features = false, features = ["xdg-portal"] }

# OS-native message dialogs. Better than rfd's message dialogs imo.
native-dialog = { version="0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }

# Logging
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.2.0"

# Open Links
open = "3.2.0"

# Directory traversal
walkdir = "2.3.3"

# Random number generation
rand = "0.8.5"

# # Expand tilde '~'
shellexpand = "3.0.0"

# Support for animation for Iced
cosmic-time = "0.1.2"

# Additional widgets for Iced
iced_aw = "0.4.1"
parking_lot = "0.12.1"
rayon = "1.7.0"

# GUI library
[dependencies.iced]
version = "0.8.0"
features = [
    # "svg",
    "glow", 
    "image", 
    "default_system_font",
    "tokio",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
# winsafe = { version = "0.0.14", features = ["shell", "user"] }

[package.metadata.winres]
OriginalFilename = "XMODITS.EXE"
FileDescription = "A tool to extract samples from tracker modules. https://github.com/B0ney/xmodits/ - GPLv3"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"

[profile.dev]
split-debuginfo = "packed"
codegen-units = 256
