[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
description = "XMODITS graphical application"
version = "0.11.0"
edition = "2021"
build = "build.rs"
license = "GPLv3"
repository = "https://github.com/B0ney/xmodits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies.xmodits-lib]
git = "https://github.com/B0ney/xmodits-lib.git"
rev = "8274b3c"
features = ["serde"]

[dependencies.tokio]
version = "1.27.0"
features = ["sync", "fs", "io-util", "parking_lot"]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["ico"]

[dependencies.rfd]
version = "0.11.4"
default-features = false
features = ["xdg-portal"]

[dependencies.native-dialog]
version="0.6.3"
features = ["windows_dpi_awareness", "windows_visual_styles"]

[dependencies.iced]
version = "0.9.0"
features = [
    # "svg",
    "glow", 
    "image", 
    "default_system_font",
    "tokio",
]

[dependencies]
anyhow = "1.0.0"
dirs = "5.0.0"
# chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
toml = "0.7.3"

tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.2.0"

open = "3.2.0"
walkdir = "2.3.3"
rand = "0.8.5"
shellexpand = "3.0.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
once_cell = "1.17.1"
tempfile = "3.5.0"

cosmic-time = "0.1.2"
iced_aw = "0.4.1"
iced_gif = "0.3.0" 
iced_lazy = "0.6.1"
cpal = "0.15.2"
rb = "0.4.1"
arrayvec = "0.7.2"
bytemuck = "1.13.1"
ringbuf = "0.3.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
# winsafe = { version = "0.0.14", features = ["shell", "user"] }

[package.metadata.winres]
OriginalFilename = "XMODITS.EXE"
FileDescription = "A tool to extract samples from tracker modules. https://github.com/B0ney/xmodits/ - GPLv3"
Comments = "This software is licensed under GPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"

[profile.dev]
split-debuginfo = "packed"
codegen-units = 256
