[package]
name = "xmodits"
authors = ["B0ney - https://github.com/B0ney"]
description = "Xmodits CLI application"
version = "0.9.8"
edition = "2021"
license = "LGPLv3"
repository = "https://github.com/B0ney/xmodits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmodits-lib = { path = "../../" } #, features=["thread"]
xmodits-common = { path = "../xmodits_common/" }
clap = { version = "4.0.23", features = ["derive", "cargo", "wrap_help"] }

[profile.release]
strip = true
opt-level = "z"
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'  

[profile.test]
opt-level = 1
