[package]
name = "xmodits-gui"
authors = ["B0ney <https://github.com/B0ney>"]
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build-dependencies]
# winres = "0.1.12"

[dependencies]
xmodits-lib = { path = "../../", features=["thread"] } #
anyhow = "1.0.66"
serde = { version="1.0.147", features = ["derive"] }
toml = "0.5.9"
once_cell = "1.15.0"
dirs = "4.0.0"
tokio = { version= "1.21.2", features = ["sync", "fs"] }
rodio = { version = "0.16.0", default-features = false, features = ["symphonia-wav"] }
image = { version= "0.24.4", default-features = false, features = ["ico"] }
rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
native-dialog = { version="0.6.3", features= ["windows_dpi_awareness", "windows_visual_styles"] }
tracing = "0.1.37"
tracing-subscriber = "0.2.0"
open = "3.0.3"

# crossbeam-channel = "0.5.6"
# rand = { version = "0.8.5" }
# # reqwest = { version = "0.11", features = ["blocking", "json"], optional=true } 
# ureq = ""

[dependencies.iced_native]
version ="0.5"

[dependencies.iced]
version = "0.5"
features = [
    "glow", 
    "image", 
    "default_system_font",
    "svg",
    "tokio",
]

# [features]
# updater = [
#     "reqwest"
# ]

# # Separate binary to update xmodits
# [[bin]]
# features = ["updater"]
# name = "xmodits_updater"
# path = ""
[profile.release]
strip = true
opt-level = "z"       # We want to make it smaller
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort' 

# [package.metadata.winres]
# FileDescription = "Rip samples from tracker music with speed!"
# Comments = "This software is licensed under AGPLv3. You can obtain the source code here: https://github.com/B0ney/xmodits/"
[profile.dev]
split-debuginfo = "packed"
codegen-units = 256