[package]
name = "xmodits-common"
authors = ["B0ney - https://github.com/B0ney"]
version = "0.1.0"
edition = "2021"
license = "MPLv2"
repository = "https://github.com/B0ney/xmodits"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmodits-lib = { path = "../../" }

[profile.release]
strip = true
opt-level = "z"     # We want to make it smaller
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.